# fraud_detection_3

./: .gitignore  Cargo.toml  README.md  metadata.json  perf.data
benches/: end_to_end.rs  max_throughput.rs  sqlite_score_save.rs  sqlite_trans_save.rs
examples/: 00_state_machine.rs  00_state_machine_worker.rs  00_sync.rs  01_tokio_event_dispatcher.rs  02_tokio_event_dispatcher.rs  03_command_bus.rs  03_minimal_mem.rs  04_command_bus.rs  05_sqlite.rs  06_mockml.rs  09_proto.rs  11_async.rs  12_logs.rs  13_minimal_mem.rs  14_mem.rs  15_sqlite.rs  16_mockml.rs
src/: command_bus.rs  lib.rs  main.rs
src/commands/: mod.rs  process_transaction.rs
src/domain/: fraud_scorer.rs  mod.rs  repository.rs  scoring.rs  transaction.rs
src/persistence/: in_memory.rs  mod.rs  sqlite.rs
src/persistence/sqlite/: mod.rs  scoring_repo.rs  transaction_repo.rs
src/state_machine/: event.rs  mod.rs  state.rs
src/workers/: dispatcher.rs
tests/: command_validation.rs
